--- a/public/tsuchiura15/section2/suiro/index.html
+++ b/public/tsuchiura15/section2/suiro/index.html
@@ -58,7 +58,7 @@
   
     <li itemscope itemtype="http://www.schema.org/SiteNavigationElement">
       <a aria-current="false" href="/tsuchiura15/section1/" itemprop="url">
-        <span itemprop="name">0_取水樋門から桜側第一用水騎乗まで</span>
+        <span itemprop="name">0_取水樋門から桜川第一揚水機場まで</span>
       </a>
     </li>
   
